Bug 293495 - Fix udisk/upower property queries done by solid
Summary: Fix udisk/upower property queries done by solid
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-06 23:57 UTC by Stefan Brüns
Modified: 2012-07-17 10:50 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (3.95 KB, patch)
2012-02-06 23:57 UTC, Stefan Brüns
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Brüns 2012-02-06 23:57:25 UTC
Created attachment 68580 [details]
Proposed patch

Version:           4.8 (using KDE 4.8.0) 
OS:                Linux

Currently, both backends have two identical problems:

1. GetAll() requires the interface name as parameter
2. The RootDevice node is treated as a U{Disks/Power}Device node. 

Reproducible: Always

Steps to Reproduce:
use e.g.
UDisksManager::devicesFromQuery("", Solid::DeviceInterface::StorageAccess)

as the udi "/org/freedesktop/UDisks" is added to m_deviceCache, it is used in the foreach loop


Expected Results:  
no Text
Comment 1 Manuel Amador (Rudd-O) 2012-07-12 21:37:31 UTC
Please FIX, this bug is still present in kde 4.9 and spamming syslogs everywhere in the world.
Comment 2 Germano Massullo (Thetra) 2012-07-16 09:52:53 UTC
Is it related to
https://bugzilla.redhat.com/show_bug.cgi?id=743779   ?
Comment 3 Stefan Brüns 2012-07-16 15:18:06 UTC
(In reply to comment #2)
> Is it related to
> https://bugzilla.redhat.com/show_bug.cgi?id=743779   ?

Very likely ...

The patch is ok'ed in https://git.reviewboard.kde.org/r/103902/ , and should be applied to 4.8.5 and 4.9.0
Comment 4 Lukáš Tinkl 2012-07-17 10:49:24 UTC
Git commit 5d177ee7aaf40df16c88f8ee602819159b747f9d by Lukas Tinkl.
Committed on 17/07/2012 at 12:48.
Pushed by lukas into branch 'KDE/4.9'.

Fix solid udisk/upower property queries

REVIEW: 103902

M  +1    -0    solid/solid/backends/udisks/udisksdevice.cpp
M  +6    -0    solid/solid/backends/udisks/udisksmanager.cpp
M  +1    -0    solid/solid/backends/upower/upowerdevice.cpp
M  +6    -0    solid/solid/backends/upower/upowermanager.cpp

http://commits.kde.org/kdelibs/5d177ee7aaf40df16c88f8ee602819159b747f9d
Comment 5 Lukáš Tinkl 2012-07-17 10:50:51 UTC
Git commit 764f7cdce7b3e54cbe8bdeccc20e85cd6a0b4aea by Lukas Tinkl.
Committed on 17/07/2012 at 12:48.
Pushed by lukas into branch 'KDE/4.8'.

Fix solid udisk/upower property queries

REVIEW: 103902

M  +1    -0    solid/solid/backends/udisks/udisksdevice.cpp
M  +6    -0    solid/solid/backends/udisks/udisksmanager.cpp
M  +1    -0    solid/solid/backends/upower/upowerdevice.cpp
M  +6    -0    solid/solid/backends/upower/upowermanager.cpp

http://commits.kde.org/kdelibs/764f7cdce7b3e54cbe8bdeccc20e85cd6a0b4aea