Fix solid udisk/upower property queries

REVIEW: 103902
BUG: 293495