solid/solid/backends/upower/upowerdevice.cpp
@@ -200,6 +200,7 @@ QMap<QString, QVariant> UPowerDevice::allProperties() const
 {
     QDBusMessage call = QDBusMessage::createMethodCall(m_device.service(), m_device.path(),
                                                        "org.freedesktop.DBus.Properties", "GetAll");
+    call << m_device.interface();
     QDBusPendingReply< QVariantMap > reply = QDBusConnection::systemBus().asyncCall(call);
     reply.waitForFinished();
 
